--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,8 @@ body {
 
 main {
     padding: 36px;
+    /* border: 1px solid magenta; */
+    box-shadow: 0px 14px 15px 17px rgba(0,0,0,0.15);
 }
 
 .header {
